--- a/package.json
+++ b/package.json
@@ -45,11 +45,8 @@
     "angular2-jwt": "^0.2.3",
     "chart.js": "^2.7.2",
     "ng2-charts": "^1.6.0",
-    "multer": "^1.3.0"
-  },
-  "engines": {
-    "node": "8.11.1",
-    "npm": "5.8.0"
+    "multer": "^1.3.0",
+    "typescript": "~2.5.3"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.4",
@@ -71,5 +68,9 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
+  },
+  "engines": {
+    "node": "8.11.1",
+    "npm": "5.8.0"
   }
 }
