--- a/package.json
+++ b/package.json
@@ -13,40 +13,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~1.7.4",
-    "@angular/compiler-cli": "^5.2.0",
     "@angular/animations": "^5.2.0",
+    "@angular/cli": "~1.7.4",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
+    "angular2-flash-messages": "^1.0.5",
+    "angular2-jwt": "^0.2.3",
     "arxiv": "0.0.4",
     "async": "^2.6.0",
     "bcryptjs": "*",
     "body-parser": "*",
+    "chart.js": "^2.7.2",
+    "core-js": "^2.4.1",
     "cors": "*",
     "express": "*",
     "jsonwebtoken": "*",
     "mongoose": "*",
+    "multer": "^1.3.0",
+    "ng2-charts": "^1.6.0",
     "ng2-component-spinner": "^0.2.1",
     "nodemon": "^1.17.3",
     "passport": "*",
     "passport-jwt": "*",
     "pdf2json": "^1.1.7",
+    "rxjs": "^5.5.6",
+    "sync-exec": "^0.6.2",
+    "typescript": "~2.5.3",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "watson-developer-cloud": "^3.2.1",
-    "angular2-flash-messages": "^1.0.5",
-    "angular2-jwt": "^0.2.3",
-    "chart.js": "^2.7.2",
-    "ng2-charts": "^1.6.0",
-    "multer": "^1.3.0",
-    "typescript": "~2.5.3"
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.4",
