--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: node_js
+node_js:
+  - '8.11.1'
 addons:
   sonarcloud:
     organization: "pipegarcia-github" # the key of the org you chose at step #3
