--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
-sonar.sources=routes
+sonar.sources=routes, src
 sonar.login=prueba1
 sonar.language=js 
 # Encoding of the source code. Default is default system encoding
