--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pdf2json": "^1.1.7",
     "rxjs": "^5.5.6",
     "sync-exec": "^0.6.2",
+    "tslint-sonarts": "^1.6.0",
     "typescript": "~2.5.3",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "watson-developer-cloud": "^3.2.1",
@@ -69,6 +70,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
+    "tslint-eslint-rules": "^5.1.0",
     "typescript": "~2.5.3"
   },
   "engines": {
