--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,9 +6,9 @@ sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
-sonar.sources=src,routes
+sonar.sources=config,models,routes,app.js
 sonar.login=prueba1
-sonar.language=js,ts
+sonar.language=js
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
