--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "multer": "^1.3.0",
     "ng2-charts": "^1.6.0",
     "ng2-component-spinner": "^0.2.1",
+    "node-kmeans": "^1.1.8",
+    "node-tfidf": "0.0.2",
     "nodemon": "^1.17.3",
     "passport": "*",
     "passport-jwt": "*",
