--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "multer": "^1.3.0",
     "ng2-charts": "^1.6.0",
     "ng2-component-spinner": "^0.2.1",
+    "ngx-bootstrap": "^3.0.0",
     "node-kmeans": "^1.1.8",
     "node-tfidf": "0.0.2",
     "nodemon": "^1.17.3",
